--- a/TP2/backend/package.json
+++ b/TP2/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
