--- a/TP2/backend/package.json
+++ b/TP2/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9",
     "tailwindcss": "^4.1.7"
   }
